# Hermes-Casper

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  ENVIRONMENT.md  NEXT_SESSION.md  README.md  casper-wallet.md  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.base.json
.claude/: launch.json  settings.json
.claude/agents/: ai.md  architect.md  backend.md  database.md  devops.md  frontend.md  qa.md  smart-contract.md  ui-designer.md
.claude/commands/: architecture.md  backend.md  contracts.md  database.md  demo.md  deploy.md  frontend.md  prd.md  research.md
.claude/context/: glossary.md  tech-decisions.md
.claude/templates/: adr.md  architecture-doc.md  prd.md  research-doc.md
.github/workflows/: ci.yml
apps/mcp/: package.json  tsconfig.json
apps/web/: .env.example  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
contracts/: Cargo.toml  Odra.toml
contracts/src/: agent_registry.rs  hermes_token.rs  lib.rs  reputation_anchor.rs
docs/: README.md
docs/api/: README.md  api-specification.md
docs/architecture/: 00-high-level.md  01-frontend.md  02-backend.md  03-ai.md  10-agent.md  11-smart-contract.md  20-payment-flow.md  21-wallet-flow.md  22-x402-flow.md  23-mcp-flow.md  30-database.md  31-event-system.md  40-security.md  41-deployment.md  README.md
docs/contracts/: README.md  smart-contract-specification.md
docs/integration/: README.md
docs/product/: README.md  agent-protocol.md  database-schema.md  demo-script.md  design-system.md  engineering-blueprint.md  prd.md  roadmap.md  task-planning.md  technical-specification.md  ui-specification.md
docs/research/: README.md  casper-core.md  casper-x402.md  frontend-stack.md  langgraph.md  mcp.md  odra.md  supabase.md
docs/setup/: mcp.md  testnet-deploy.md
scripts/: demo-reset.sql  seed-defi-rwa.sql
supabase/: seed.sql
supabase/migrations/: 20260705000001_initial_schema.sql  (+4 more)
(+82 files in other folders)
