[package]
name = "hermes-contracts"
version = "0.1.0"
edition = "2021"
description = "Hermes on-chain trust root: HERMES token (CEP-18 + CEP-3009 gasless), agent registry, reputation anchor"
license = "Apache-2.0"

[dependencies]
odra = { version = "2.8.2", default-features = false }
odra-modules = { version = "2.8.2", features = ["eip712"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.2"
# Host-only livenet deployment env (testnet). Enabled via the `livenet` feature.
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[dev-dependencies]
odra-test = "2.8.2"
hex = "0.4"

[build-dependencies]
odra-build = "2.8.2"

[features]
default = []
# Enables the testnet deploy binary (bin/deploy_testnet.rs). Not part of the wasm build.
livenet = ["dep:odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "hermes_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "deploy_testnet"
path = "bin/deploy_testnet.rs"
required-features = ["livenet"]
test = false
